Adding tex file

--- a/air_assignment_09/assignment09.tex
+++ b/air_assignment_09/assignment09.tex
@@ -11,16 +11,24 @@
 \begin{itemize}
 	\item \textbf{Answer the following questions}
 	\begin{itemize}
-		\item \textbf{What are Knowledge-Based agents?}
-		\item \textbf{What is Knowledge Base (KB)?}
-		\item \textbf{Which operations can Knowledge-Based agents perform?}
-		\item \textbf{What is logical reasoning?}
-		\item \textbf{What is syntax ?}
-		\item \textbf{What is a model?}
-		\item \textbf{What is entailment ?}
-		\item \textbf{What is inference ?}
-		\item \textbf{What is the difference between entailment and inference?}
+		\item \textbf{What are Knowledge-Based agents?}\\
+		\item \textbf{What is Knowledge Base (KB)?}\\
+		A knowledge base is a a set of representations of facts of the world. It is a method to store complex unstructured and structured data/information used in a computer system. 
+		\item \textbf{Which operations can Knowledge-Based agents perform?}\\
+		\item \textbf{What is logical reasoning?}\\
+		Logical reasoning is a method of reasoning where a system can make a decision based on the available knowledge using logical techniques like deduction and induction.
+		\item \textbf{What is syntax ?}\\
+		\item \textbf{What is a model?}\\
+		Any world in which a sentence is true under a particular interpretation is called a model of that sentence under that interpretation.	A sentence is a single representation of a fact of the world.
+		\item \textbf{What is entailment ?}\\
+		\item \textbf{What is inference ?}\\
+		Inference is a method of drawing logical conclusions using facts that are true or that are assumed to be true.
+		\item \textbf{What is the difference between entailment and inference?}\\
 	\end{itemize}
+	
+	
+	\newpage
+	
 	
 	\item \textbf{Evaluate the performance of the algorithm and the different ordering strategies. For example, number of evaluations, path length for each of the given scenarios etc. An evaluation is performed any time the constraints associated with a partial path are checked
 		for satisfaction.}
